Fix wrong font in default article

--- a/themes/blue/scss/content.scss
+++ b/themes/blue/scss/content.scss
@@ -36,7 +36,7 @@
     .header {
         @extend .flex;
         @extend .flex-row;
-        @extend .flex-vend;        
+        @extend .flex-vend;
         justify-content: space-between;
 
         border-bottom: 2px solid $light-blue;
@@ -57,6 +57,7 @@
     }
 }
 
+.gs-article .content,
 .gs-news-article .content,
 .gs-news-summary .content {
     font-family: $content-font;
