--- a/themes/light/scss/content.scss
+++ b/themes/light/scss/content.scss
@@ -57,6 +57,7 @@
     }
 }
 
+.gs-article .content,
 .gs-news-article .content,
 .gs-news-summary .content {
     font-family: $content-font;
